--- a/fishingstories/app/templates/index.html
+++ b/fishingstories/app/templates/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8"/>
+    <title>Fishing Stories</title>
+    <style>
+        h1 {
+            color: green;
+        }
+    </style>
+</head>
+<body>
+    <h1>Fishing Stories</h1>
+</body>
+</html>
 
