--- a/fishingstories/app/templates/index.html
+++ b/fishingstories/app/templates/index.html
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8"/>
-    <title>Fishing Stories</title>
-    <style>
-        h1 {
-            color: green;
-        }
-    </style>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
     <h1>Fishing Stories</h1>
     <a href='/baits'>baits</a>
-</body>
-</html>
+{% endblock %}
 
