--- a/fishingstories/app/templates/baits.html
+++ b/fishingstories/app/templates/baits.html
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8"/>
-    <title>Fishing Stories - Baits</title>
-    <style>
-        h1 {
-            color: green;
-        }
-        td {
-            color: darkgreen;
-        }
-    </style>
-</head>
-<body>
+{% extends "base.html" %}
+
+
+{% block content %}
     <h1>Baits</h1>
     <table>
         <thead>
@@ -34,5 +23,4 @@
             {% endfor %}
         </tbody>
     </table>
-</body>
-</html>
+{% endblock %}
