--- a/fishingstories/templates/base.html
+++ b/fishingstories/templates/base.html
@@ -1,1 +1,35 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    
+    <meta charset="utf-8"/>
+    {% if title %}
+    <title>{{ title }}</title>
+    {% else %}
+    <title>Fishing Stories</title>
+    {% endif %}
+    <style>
+        h1 {
+            color: green;
+        }
+    </style>
+</head>
+<body>
+    <div>
+        <h1>Fishing Stories</h1>
+        <a href="{{ url_for('index') }}">Home</a>
+        <a href="{{ url_for('fishingstories.login') }}">Login</a>
+    </div>
+    <hr>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul>
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
+    {% block content %}{% endblock %}
+</body>
+</html>
