--- a/fishingstories/templates/fishingstories/index.html
+++ b/fishingstories/templates/fishingstories/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Fishing Stories</h1>
-    <a href='/baits'>baits</a>
+    <h1>Welcome!</h1>
+    <a href='/baitsmenu'>baits</a>
 {% endblock %}
 
