--- a/fishingstories/templates/fishingstories/index.html
+++ b/fishingstories/templates/fishingstories/index.html
@@ -2,6 +2,6 @@
 
 {% block content %}
     <h1>Welcome!</h1>
-    <a href='/baitsmenu'>baits</a>
+    <a href="/baitsmenu">baits</a>
 {% endblock %}
 
