--- a/fishingstories/templates/fishingstories/index.html
+++ b/fishingstories/templates/fishingstories/index.html
@@ -2,6 +2,15 @@
 
 {% block content %}
     <h1>Welcome!</h1>
-    <a href="/baitsmenu">baits</a>
+    <div>
+        <a href="/baitsmenu">baits</a>
+    </div>
+    <div>
+        <a href="/gearmenu">gear</a>
+    </div>
+    <div></div>
+    <div></div>
+    <hr>
+    <a href="admin">admin login</a>
 {% endblock %}
 
