--- a/fishingstories/templates/admin/anglermenu.html
+++ b/fishingstories/templates/admin/anglermenu.html
@@ -3,6 +3,9 @@
 {% block content %}
     <h1>Manage Anglers</h1>
     <div>
+        <a href="/ranks">manage ranks</a>
+    </div>
+    <div>
         <a href="/anglers">show anglers</a>
     </div>
     <div>
