--- a/fishingstories/templates/fishingstories/index.html
+++ b/fishingstories/templates/fishingstories/index.html
@@ -3,6 +3,9 @@
 {% block content %}
     <h1>Welcome!</h1>
     <div>
+        <a href="/fishing-spots">fishing spots</a>
+    </div>
+    <div>
         <a href="/baitsmenu">baits</a>
     </div>
     <div>
