--- a/fishingstories/templates/admin/ranks.html
+++ b/fishingstories/templates/admin/ranks.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Add Bait</h1>
+    <h1>Angler Ranks</h1>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
