--- a/fishingstories/templates/fishing_spots/main.html
+++ b/fishingstories/templates/fishing_spots/main.html
@@ -1,1 +1,14 @@
+{% extends "base.html" %}
 
+{% block content %}
+    <h1>Fishing Spots</h1>
+    <div>
+        <a href="/myspots">my fishing spots</a>
+    </div>
+    <div>
+        <a href="/public-spots">public fishing spots</a>
+    </div>
+    <div>
+        <a href="/group-spots">group fishing spots</a>
+    </div>
+{% endblock %}
