--- a/fishingstories/templates/base.html
+++ b/fishingstories/templates/base.html
@@ -17,8 +17,10 @@
 <body>
     <div>
         <h1>Fishing Stories</h1>
+        {% if authenticated %}
         <a href="{{ url_for('index') }}">Home</a>
-        <a href="{{ url_for('fishingstories.login') }}">Login</a>
+        <a href="{{ url_for('fishingstories.index') }}">Logout</a>
+        {% endif %}
     </div>
     <hr>
     {% with messages = get_flashed_messages() %}
