--- a/fishingstories/static/base.css
+++ b/fishingstories/static/base.css
@@ -24,6 +24,10 @@ body {
     padding-left: 5px;
 }
 
+.left-bottom>div {
+    background-color: white;
+}
+
 .right-top {
     width: calc(25vw - 3px);
     height: 18vh;
