--- a/fishingstories/templates/admin/index.html
+++ b/fishingstories/templates/admin/index.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Welcome Administrator</h1>
     <div>
-        <a href="/priviledges">manage priviledges</a>
+        <a href="/manage-priviledges">manage priviledges</a>
     </div>
     <div>
         <a href="/account_types">manage account types</a>
