--- a/fishingstories/templates/admin/priviledges.html
+++ b/fishingstories/templates/admin/priviledges.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>Priviledges</h1>
-    <table>
+    <table class="data-display-table">
         <thead>
             <th>ID</th>
             <th>Priviledge Name</h>
