--- a/fishingstories/templates/admin/index.html
+++ b/fishingstories/templates/admin/index.html
@@ -6,7 +6,7 @@
         <a href="/manage-priviledges">manage priviledges</a>
     </div>
     <div>
-        <a href="/account_types">manage account types</a>
+        <a href="/manage-account-types">manage account types</a>
     </div>
     <div>
         <a href="/manage-anglers">manage anglers</a>
