--- a/fishingstories_admin/templates/admin/angler-edit.html
+++ b/fishingstories_admin/templates/admin/angler-edit.html
@@ -2,23 +2,17 @@
 
 
 {% block content %}
-    <h1>Angler - {{ form.name.data }}</h1>
+    <h1>Edit Angler - {{ form.name.data }}</h1>
     {{ form.hidden_tag() }}
-    
-    {% if form.is_editable %}
-        {% set form_method='post' %}
-    {% else %}
-        {% set form_method='get' %}
-    { endif %}
-    <form method="{{ form_method }}" action="{{ target_url }}">
+    <form method="" action="">
         <table>
             <tr>
                 <td>{{ form.name.label }}</td>
                 <td>{{ form.name() }}</td>
             </tr>
             <tr>
-                <td>{{ form.rank.label }}</td>
-                <td>{{ form.rank(size=1) }}</td>
+                <td>{{ form.ranks.label }}</td>
+                <td>{{ form.ranks(size=1) }}</td>
             </tr>
             <tr>
                 <td>{{ form.angler_id.label }}</td>
@@ -33,13 +27,36 @@
                 <td>{{ form.privileges() }}</td>
             </tr>
             <tr>
-                <td> </td>
-                {% if form.is_editable %}
+                <td></td>
                 <td>{{ form.submit() }}</td>
-                {% else %}
-                <td>{{ form.submit(value='Edit') }}</td>
-                {% endif %}
             </tr>
         </table>
     </form>
+    <script>
+        $(document).ready(function () {
+            $('form').submit(function (e) {
+                let url = "{{ url_for('admin.angler_edit', angler_id=form.angler_id.data) }}";
+                $.ajax({
+                    type: "PATCH",
+                    url: url,
+                    data: $('form').serialize(),
+                    success: function (data) {
+                        window.location.href = "{{ url_for('admin.angler', angler_id=form.angler_id.data) }}";
+                    },
+                    error: function (data) {
+                        window.location.href = "{{ url_for('admin.angler', angler_id=form.angler_id.data) }}";
+                    }
+                });
+                e.preventDefault();
+            });
+
+            $.ajaxSetup({
+                beforeSend: function (xhr, settings) {
+                    if (!/^GET|HEAD|OPTIONS|TRACE$/i.test(settings.type) && !this.crossDomain) {
+                        xhr.setRequestHeader("X-CSRFToken", "{{ form.csrf_token._value() }}")
+                    }
+                }
+            })
+        });
+    </script>
 {% endblock %}
