--- a/fishingstories_admin/templates/admin/index.html
+++ b/fishingstories_admin/templates/admin/index.html
@@ -3,6 +3,9 @@
 {% block content %}
     <h1>Welcome Administrator</h1>
     <div>
+        <a href="{{ url_for('admin.users') }}">manage users</a>
+    </div>
+    <div>
         <a href="{{ url_for('admin.manage_privileges') }}">manage privileges</a>
     </div>
     <div>
