--- a/fishingstories_admin/templates/admin/angler.html
+++ b/fishingstories_admin/templates/admin/angler.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <h1>Angler - {{ form.name.data }}</h1>
-    <div><a href="{{ url_for('admin.amglers') }}">back</a></div>
+    <div><a href="{{ url_for('admin.anglers') }}">back</a></div>
     <div></div>
     {{ form.hidden_tag() }}
     <table class="view-only-form">
