--- a/fishingstories/templates/base.html
+++ b/fishingstories/templates/base.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     {% if title %}
     <title>{{ title }}</title>
     {% else %}
     <title>Fishing Stories</title>
     {% endif %}
-    <link rel="stylesheet" href="../static/base.css"/>
+    <link rel="stylesheet" href="/static/base.css"/>
 </head>
 <body>
     <!--Introduction section with heading, image and audio-->
