--- a/fishingstories/templates/fishingstories/index.html
+++ b/fishingstories/templates/fishingstories/index.html
@@ -4,13 +4,13 @@
     {% if authenticated %}
     <h1>Welcome!</h1>
     <div>
-        <a href="/fishing-spots">fishing spots</a>
+        <a href="">fishing spots</a>
     </div>
     <div>
-        <a href="/baitsmenu">baits</a>
+        <a href="{{ url_for('angler.baits_menu') }}">baits</a>
     </div>
     <div>
-        <a href="/gearmenu">gear</a>
+        <a href="{{ url_for('angler.gear_menu') }}">gear</a>
     </div>
     <div></div>
     <div></div>
