--- a/fishingstories/templates/search.html
+++ b/fishingstories/templates/search.html
@@ -1,35 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>View Bait</h1>
-    <table class="view-only-form">
-        {{ form.hidden_tag() }}
-        <tr>
-            <td>{{ form.name.label }}</td>
-            <td>{{ form.name() }}</td>
-            <td><a href="{{ url_for('angler.bait_edit', bait_id=form.bait_id) }}">EDIT</a></td>
-            {% for error in form.name.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </tr>
-        <tr>
-            <td></td>
-            <td>{{ form.artificial() }} {{ form.artificial.label }}</td>
-            {% for error in form.artificial.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </tr>
-        <tr>
-            <td>{{ form.size.label }}</td>
-            <td>{{ form.size() }}</td>
-        </tr>
-        <tr>
-            <td>{{ form.color.label }}</td>
-            <td>{{ form.color() }}</td>
-        </tr>
-        <tr>
-            <td>{{ form.description.label }}</td>
-            <td>{{ form.description() }}</td>
-        </tr>
-    </table>
+    <h1>{{ form.search.label }} Search</h1>
+    <form method="get" action="{{ search_endpoint }}">
+        <div>
+            {{ form.search.label }} {{ form.search() }}
+        </div>
+        <div>
+            {{ form.submit() }}
+        </div>
+    </form>
 {% endblock %}
