--- a/fishingstories/templates/fishing_spots/main.html
+++ b/fishingstories/templates/fishing_spots/main.html
@@ -6,6 +6,9 @@
         <a href="{{ url_for('angler.my_spots', angler_id=angler_id) }}">my fishing spots</a>
     </div>
     <div>
+        <a href="{{ url_for('angler.fishing_spot_create', angler_id=angler_id) }}">create fishing spot</a>
+    </div>
+    <div>
         <a href="/public-spots">public fishing spots</a>
     </div>
     <div>
