--- a/fishingstories_admin/templates/admin/index.html
+++ b/fishingstories_admin/templates/admin/index.html
@@ -15,6 +15,9 @@
         <a href="{{ url_for('admin.manage_anglers') }}">manage anglers</a>
     </div>
     <div>
+        <a href="{{ url_for('admin.load_current_stations') }}">load current stations</a>
+    </div>
+    <div>
         <a href="{{ url_for('admin.statistics') }}">statistics</a>
     </div>
 {% endblock %}
