--- a/fishingstories/templates/fishing_spots/fishing-spot-create.html
+++ b/fishingstories/templates/fishing_spots/fishing-spot-create.html
@@ -8,6 +8,7 @@
             <input type="text" name="q" id="search" placeholder="Search Google Maps"/>
             <input type="submit" value="Go!"/>
             <br><span style="font-size:medium;color:gold;">(drop a pin for coordinates)</span>
+            <br><span style="font-size:medium;color:gold;">(use decimal representation ex 42.8133)</span>
         </form>    
     </section>
     <form action="" method="post" novalidate>
