--- a/fishingstories_admin/templates/admin/index.html
+++ b/fishingstories_admin/templates/admin/index.html
@@ -18,6 +18,9 @@
         <a href="{{ url_for('admin.load_current_stations') }}">load current stations</a>
     </div>
     <div>
+        <a href="{{ url_for('admin.load_sea_condition_sites') }}">load sea condition sites</a>
+    </div>
+    <div>
         <a href="{{ url_for('admin.statistics') }}">statistics</a>
     </div>
 {% endblock %}
