--- a/fishingstories_admin/templates/base.html
+++ b/fishingstories_admin/templates/base.html
@@ -62,7 +62,7 @@
             100 Python Way<br/>
             CodeVille, NH 03000<br/>
             <a href="tel:1+603-555-5555">(603) 555-5555</a><br/>
-            <a href="mailto:rjm@developersbeach.com">rob@codelife.com</a>
+            <a href="mailto:rjm@developersbeach.com">rob@developersbeach.com</a>
         </address>
     </section>
 </body>
